--- a/index_loskutova.html
+++ b/index_loskutova.html
@@ -8,6 +8,6 @@
    <title>Работа с GIT</title> 
 </head> 
 <body> 
-   <p>Git + GitHub</p>
+   <p>Git — это система контроля версий, а GitHub — платформа для хостинга и совместной работы над проектами</p>
 </body> 
 </html>
